# Nanoleaf-Screen-Mirror-for-KDE

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Message — dbus-next 0.2.3 documentation.html  NANOLEAF_NOVEL_AUDIT.md  NANOLEAF_PIXEL_AUDIT.md  NANOLEAF_REPO_AUDIT.md  README.md  SECURITY.md  The High Level Client — dbus-next 0.2.3 documentation.html  install-nanoleaf-kde-sync.sh  pyproject.toml  setup.py
.agents/skills/code-audit/: SKILL.md
.agents/skills/minimal-patch/: SKILL.md
.agents/skills/release-check/: SKILL.md
.agents/skills/runtime-debug/: SKILL.md
.cursor/rules/: 001-project-context.mdc  002-python-conventions.mdc  003-security.mdc
.github/: PR_HISTORY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  quarterly_calibration_qa_sweep.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/actions/arch-metadata-validation/: action.yml
.github/workflows/: build.yml  ci-weekly.yml  ci.yml  codeql.yml  dependency-review.yml  lint.yml  pre-release.yml  quarterly-calibration-qa-sweep.yml  release.yml  reusable-ci-gates.yml  reusable-test.yml
.opencode/: task-spec.md
.opencode/context/: repo-structure.md
.opencode/plans/: fix-3-test-failures.DONE.md  fix-3-test-failures.md  fix-unknown-error-race.DONE.md  full-audit-2026-05-18.DONE.md  full-audit-2026-05-18.md  icc-profile-and-performance-research.DONE.md  icc-profile-and-performance-research.md
assets/udev/: 60-nanoleaf-kde-sync.rules
cursor/: .gitignore  CHANGELOG.md  DRIVER_INTEGRATION_PLAN.md  README.md  nanoleaf-kde-sync.desktop  pyproject.toml  setup.py
cursor/src/: config.py  service.py
cursor/src/NEED TO BE ADDED CORRECTLY/: capture__init__.py  test_analyzer.py  test_service_status.py
cursor/src/capture/: __init__.py  factory.py  interfaces.py  kmsgrab.py  kwin_dbus.py  mock_capture.py  replay_capture.py  screen_capture.py
cursor/src/color/: __init__.py  analyzer.py  hdr.py  zone_mapper.py
cursor/src/config/: __init__.py  normalize.py  store.py
cursor/src/device/: __init__.py  hid_transport.py  interfaces.py  mock.py  mock_driver.py  nanoleaf_usb.py  protocol_stub.py  usb_driver.py
cursor/src/nanoleaf_sync/: __init__.py
cursor/src/nanoleaf_sync/capture/: __init__.py  kmsgrab.py  screen_capture.py
cursor/src/nanoleaf_sync/config/: __init__.py
cursor/src/nanoleaf_sync/device/: __init__.py  nanoleaf_usb.py
cursor/src/nanoleaf_sync/processing/: analyzer.py  hdr.py
cursor/src/nanoleaf_sync/runtime/: service.py
cursor/src/nanoleaf_sync/ui/: __init__.py  tray.py
cursor/src/runtime/: engine.py  processing.py  startup.py  state.py
cursor/src/tools/: __init__.py  color_kmeans.py
cursor/src/ui/: __init__.py  settings_dialog.py  tray.py  tray_app.py  zone_presets.py
cursor/tests/: conftest.py  test_color_analyzer.py  test_config.py  test_hdr.py  test_replay_capture.py  test_runtime_engine.py  test_screen_capture.py  test_service_robustness.py  test_service_status.py  test_service_status_modes.py  test_zone_mapper.py
cursor/tests/device/: test_driver_contract.py
docs/: AUTO_BACKEND.md  CALIBRATION_PARITY_SPEC.md  CALIBRATION_PARITY_TEST_CHECKLIST.md  CHANGELOG.md  COMMIT_CHECKLIST.md  HARDWARE_SETUP.md  INSTALL_ARCH.md  LATENCY_PLAN.md  NEXT_STEPS_DELEGATION.md  PACKAGING_AUR.md  PHYSICAL_CALIBRATION_VALIDATION_LOG.md  PLAN_SETTINGS_MENU_REVAMP.md  PR_HISTORY.md  RC_TEST_MATRIX.md  README.md  RELEASE_CHECKLIST.md  RELEASE_TOOLCHAIN.md  REPOSITORY_MAP.md  REPO_CULL_AUDIT.md  SECURITY.md  SMOKE_TEST.md  TECHNICAL_DESIGN.md  TROUBLESHOOTING.md  USER_GUIDE.md  nanoleaf-kde-sync.desktop  nanoleaf-kde-sync.metainfo.xml  requirements-test.txt  requirements.txt
docs/ai/: current-state.md  repo-map.md
docs/archive/: 2026-04-22-physical-calibration-validation-log.md  2026-04-22-rc1-gate.md
docs/reference/: README.md
installer/: install-nanoleaf-kde-sync.sh
packaging/arch/: .SRCINFO  PKGBUILD  nanoleaf-kde-sync.install
perf/: baseline.json
scripts/: build-appimage.sh  build_arch_package.sh  build_drm_helper.sh  check_calibration_guardrails.py  check_release_versions.py  install_local_fix.sh  reinstall_local.sh  release_gate.sh  setcap.sh  setup_udev.sh  sync_changelog_from_release.py  sync_release_version.py  uninstall_local.sh  validate_release_metadata.py  validate_release_promotion.py  validate_wheel.py  verify_runtime_install.py
scripts/ai/: make_codex_prompt.py  review_codex_output.py  run_codex_prompt.py  run_task.py  status_task.py
specs/: SCOPE_TEMPLATE.md
src/nanoleaf_sync/: __init__.py  _coerce.py  desktop_entry.py  doc_paths.py  service.py
src/nanoleaf_sync/capture/: __init__.py  _async_loop.py  _drm_helper.c  _drm_helper_bridge.py  _utils.py  (+22 more)
stubs/: hid.pyi
stubs/dbus_next/: __init__.pyi  aio.pyi  constants.pyi  signature.pyi
tests/: conftest.py  install_parsers.py  qt_headless.py  repo_text.py  test_4d_speed_path.py  test_adaptive_smoothing.py  test_anchor_calibration.py  test_audit_fixes.py  test_audit_gaps_extended.py  test_audit_stage1.py  test_auto_probe.py  test_auto_probe_extended.py  test_autostart_tool.py  test_backend_diagnostics_reporting.py  test_benchmark_tool.py  test_blending.py  test_calibration_flow.py  test_calibration_state.py  test_calibration_surface_consistency.py  test_calibration_widget.py  test_capture_factory_threading.py  test_capture_metadata.py  test_capture_utils.py  test_check_calibration_guardrails.py  test_check_release_versions.py  test_cleanup_qol_pass.py  test_color_accuracy_diagnostics.py  test_color_accuracy_pipeline.py  test_color_analyzer.py  test_color_golden_matrix.py  test_color_pipeline_overhaul.py  test_color_processing_extended.py  test_colour_path_diagnostics.py  test_compat_doctor.py  test_compat_errors.py  test_compat_kde_version.py  test_compat_kwin_probe.py  test_compat_portal_probe.py  test_compat_report_upstream.py  test_compat_update_checker.py  (+120 more)
tests/device/: test_driver_contract.py  test_hid_transport.py  test_protocol.py  test_usb_driver.py
(+125 files in other folders)
