[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoleaf-kde-sync"
dynamic = ["version"]
description = "Nanoleaf screen mirroring for KDE Plasma on Linux."
readme = "README.md"
license = "LicenseRef-Nanoleaf-Source-Available-Non-Commercial"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.21",
  "PyQt6>=6.0",
  "dbus-next>=0.2.0",
  "hidapi>=0.14.0",
  "dacite>=1.8.1",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.0",
]
portal = [
  "pipewire",
]
gstreamer = [
  "pygobject",
]

[project.scripts]
nanoleaf-kde-sync = "nanoleaf_sync.ui.tray_app:main"
nanoleaf-kde-sync-service = "nanoleaf_sync.service:main"
nanoleaf-kde-sync-doctor = "nanoleaf_sync.tools.doctor:main"
nanoleaf-kde-sync-smoke-test = "nanoleaf_sync.tools.smoke_test:main"
nanoleaf-kde-sync-init-config = "nanoleaf_sync.tools.config_init:main"
nanoleaf-kde-sync-autostart = "nanoleaf_sync.tools.autostart:main"
nanoleaf-kde-sync-reset = "nanoleaf_sync.tools.reset:main"


[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nanoleaf_sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["src/nanoleaf_sync/ui/"]
files = ["src/nanoleaf_sync"]
