[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoleaf-kde-sync"
dynamic = ["version"]
description = "Nanoleaf screen mirroring for KDE Plasma on Linux."
readme = "README.md"
license = "LicenseRef-Nanoleaf-Source-Available-Non-Commercial"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{name = "SpinGiantCRM"}]
maintainers = [{name = "nanoleaf-kde-sync contributors"}]
keywords = ["nanoleaf", "kde", "plasma", "wayland", "ambient-lighting", "screen-mirroring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment :: KDE",
  "Topic :: Multimedia :: Graphics :: Capture",
]
dependencies = [
  "numpy>=1.21,<3",
  "PyQt6>=6.0,<7",
  "dbus-next>=0.2.0,<1",
  "hidapi>=0.14.0,<1",
  "dacite>=1.8.1,<2",
  "tomli-w>=1.0.0,<2",
  "packaging>=24.0,<27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.0",
  "pre-commit>=4.0",
]
portal = [
  "pipewire",
]
gstreamer = [
  "pygobject",
]

[project.scripts]
nanoleaf-kde-sync = "nanoleaf_sync.ui.tray_app:main"
nanoleaf-kde-sync-service = "nanoleaf_sync.service:main"
nanoleaf-kde-sync-doctor = "nanoleaf_sync.tools.doctor:main"
nanoleaf-kde-sync-smoke-test = "nanoleaf_sync.tools.smoke_test:main"
nanoleaf-kde-sync-init-config = "nanoleaf_sync.tools.config_init:main"
nanoleaf-kde-sync-autostart = "nanoleaf_sync.tools.autostart:main"
nanoleaf-kde-sync-reset = "nanoleaf_sync.tools.reset:main"
nanoleaf-kde-sync-benchmark = "nanoleaf_sync.tools.benchmark:main"

[project.urls]
Homepage = "https://github.com/SpinGiantCRM/Nanoleaf-Screen-Mirror-for-KDE"
Repository = "https://github.com/SpinGiantCRM/Nanoleaf-Screen-Mirror-for-KDE"
Issues = "https://github.com/SpinGiantCRM/Nanoleaf-Screen-Mirror-for-KDE/issues"
Documentation = "https://github.com/SpinGiantCRM/Nanoleaf-Screen-Mirror-for-KDE/blob/main/docs/USER_GUIDE.md"
Changelog = "https://github.com/SpinGiantCRM/Nanoleaf-Screen-Mirror-for-KDE/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nanoleaf_sync*"]

[tool.setuptools.package-data]
nanoleaf_sync = [
  "VERSION",
  "ui/style.qss",
  "assets/icons/**/*",
  "assets/udev/60-nanoleaf-kde-sync.rules",
  "capture/nanoleaf_drm_helper",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = [
  "src/nanoleaf_sync/ui/display_configurator.py",
  "src/nanoleaf_sync/ui/live_diagnostics.py",
  "src/nanoleaf_sync/ui/led_color_calibration_dialog.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["N801"]
"tests/**" = ["N802", "N803", "N806"]
"src/nanoleaf_sync/tools/doctor.py" = ["E402"]
"src/nanoleaf_sync/tools/smoke_test.py" = ["E402"]
"src/nanoleaf_sync/tools/benchmark.py" = ["E402"]
"src/nanoleaf_sync/tools/autostart.py" = ["E402"]
"src/nanoleaf_sync/capture/kwin_dbus.py" = ["E402"]
"src/nanoleaf_sync/config/store.py" = ["E402"]
"src/nanoleaf_sync/device/hid_transport.py" = ["E402"]
"src/nanoleaf_sync/ui/settings_dialog.py" = ["E402", "N802", "N803", "N806"]
"src/nanoleaf_sync/ui/settings_dialog_*.py" = ["E402", "N802", "N803", "N806", "F841"]
"src/nanoleaf_sync/ui/display_configurator.py" = ["N802", "N803", "N806"]
"src/nanoleaf_sync/ui/calibration_widget.py" = ["N806"]
"src/nanoleaf_sync/ui/led_color_calibration_dialog.py" = ["N806"]
"src/nanoleaf_sync/capture/_drm_zone_sampler.py" = ["N802", "N806"]
"src/nanoleaf_sync/color/hdr.py" = ["N806"]
"src/nanoleaf_sync/color/primaries.py" = ["N806"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = ["stubs"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
exclude = ["src/nanoleaf_sync/ui/"]
files = ["src/nanoleaf_sync"]

[[tool.mypy.overrides]]
module = [
  "nanoleaf_sync.compat.*",
  "nanoleaf_sync.config.*",
  "nanoleaf_sync.tools.doctor",
  "nanoleaf_sync.tools.smoke_test",
  "nanoleaf_sync.tools.autostart",
  "nanoleaf_sync.tools.reset",
  "nanoleaf_sync.tools.config_init",
  "nanoleaf_sync.tools.benchmark",
  "dbus_next.*",
  "gi.*",
  "hid",
  "hidraw",
  "pipewire",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "nanoleaf_sync.runtime.srgb",
  "nanoleaf_sync.runtime.zones",
  "nanoleaf_sync.runtime.engine_frame",
  "nanoleaf_sync.runtime.color_pipeline",
  "nanoleaf_sync.runtime.color_processing",
  "nanoleaf_sync.runtime.virtual_zones",
  "nanoleaf_sync.color.primaries",
  "nanoleaf_sync.runtime.compositor",
]
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "nanoleaf_sync.runtime.engine_loop",
  "nanoleaf_sync.runtime.engine_loop_capture",
  "nanoleaf_sync.runtime.engine_loop_process",
  "nanoleaf_sync.runtime.engine_loop_hid",
  "nanoleaf_sync.runtime.engine_loop_supervisor",
]
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
